2010-06-02  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Check whenever we are using mono's LLVM branch.

2010-05-31  Robert Jordan  <robertj@gmx.net>

	* configure.in: Windows: mcs_topdir_from_srcdir must not be
	converted to a Win32 path unless it's already a cygwin path.
	Fixes --with-mcs-docs for in-tree mcs builds.

2010-05-28  Robert Jordan  <robertj@gmx.net>

	* configure.in: Fix mcs_topdir* for the Windows build.

2010-05-28  Mark Probst  <mark.probst@gmail.com>

	* tools/sgen/sgen-grep-binprot.c (main): Use strtoul(), not
	strtol(), to parse addresses from the command line.

2010-05-20  Miguel de Icaza  <miguel@novell.com>

	* configure.in: drop again the pkg.m4 dependency and for eglib
	cases (and not-Windows) make it entirely optional.

2010-05-11  Andrew Jorgensen  <ajorgensen@novell.com>

	* scripts/mono-find-*.in: Look for libmono-2.0.so.1, not libmono.so
	and set MONO_PATH to ensure that mscorlib.dll can be found

2010-04-29  Andreas Färber  <andreas.faerber@web.de>

	* configure.in: Check for -lm necessity.
	Fixes linking on Haiku.

	Contributed under MIT/X11 license.

2010-04-27  Mark Probst  <mark.probst@gmail.com>

	* scripts/mono-heapviz: If the major sections are too small, use a
	larger width.

2010-04-27  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Switch to eglib by default.

2010-04-26  Geoff Norton  <gnorton@novell.com>

	* configure.in: Allow cross compiling osx for 64-bit

2010-04-26  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Applied patch from Robert Nagy (robert@openbsd.org). Add
	sys/param.h dependencies to a few checks.

2010-04-25  Mark Probst  <mark.probst@gmail.com>

	* tools/sgen/sgen-grep-binprot.c: Support for major Mark&Sweep
	collector.

2010-04-20  Jonathan Pryor  <jpryor@novell.com>

	* configure.in: Check for the asm/sigcontext.h header.

2010-04-20  Andrés G. Aragoneses  <andres@lindenlab.com>

	* README: Replace --with-profile2 with --with-profile4.

2010-04-20  Jonathan Pryor  <jpryor@novell.com>
