@@ -35,7 +35,9 @@ enum {
 	SGEN_PROTOCOL_THREAD_RESTART,
 	SGEN_PROTOCOL_THREAD_REGISTER,
 	SGEN_PROTOCOL_THREAD_UNREGISTER,
-	SGEN_PROTOCOL_MISSING_REMSET
+	SGEN_PROTOCOL_MISSING_REMSET,
+	SGEN_PROTOCOL_ALLOC_PINNED,
+	SGEN_PROTOCOL_ALLOC_DEGRADED
 };
 
 typedef struct {
